--- a/StefanBoltzmann.py.ipynb
+++ b/StefanBoltzmann.py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -18,38 +18,25 @@
       "frac_diff : N/A \n",
       "\n",
       "number of steps : 200.000000\n",
-      "dy :  2.0000 ,  integral = 6.49416726685\n",
+      "dy :  0.5000 ,  integral = 6.49416726685\n",
       "frac_diff :  0.0005263136303 \n",
       "\n",
-      "number of steps : 300.000000\n",
-      "dy :  3.0000 ,  integral = 6.49398441255\n",
-      "frac_diff :  2.81574890932e-05 \n",
-      "\n",
       "number of steps : 400.000000\n",
-      "dy :  4.0000 ,  integral = 6.4939536438\n",
-      "frac_diff :  4.73806148023e-06 \n",
+      "dy :  0.2500 ,  integral = 6.4939536438\n",
+      "frac_diff :  3.28956839854e-05 \n",
       "\n",
-      "number of steps : 500.000000\n",
-      "dy :  5.0000 ,  integral = 6.4939452356\n",
-      "frac_diff :  1.29477579804e-06 \n",
+      "number of steps : 800.000000\n",
+      "dy :  0.1250 ,  integral = 6.49394029236\n",
+      "frac_diff :  2.05598447417e-06 \n",
       "\n",
-      "number of steps : 600.000000\n",
-      "dy :  6.0000 ,  integral = 6.49394221541\n",
-      "frac_diff :  4.65078104054e-07 \n",
+      "number of steps : 1600.000000\n",
+      "dy :  0.0625 ,  integral = 6.4939394579\n",
+      "frac_diff :  1.28499047361e-07 \n",
       "\n",
-      "The integral evaluated to within specified accuracy:"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Unknown format code 'd' for object of type 'float'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-128-90c2b972f5c3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     48\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 50\u001b[1;33m \u001b[1;32mprint\u001b[0m \u001b[0mstefboltz\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m100.0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     51\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-128-90c2b972f5c3>\u001b[0m in \u001b[0;36mstefboltz\u001b[1;34m(a, b, dy)\u001b[0m\n\u001b[0;32m     41\u001b[0m         \u001b[0mdy\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 43\u001b[1;33m     \u001b[1;32mprint\u001b[0m \u001b[1;34m'The integral evaluated to within specified accuracy:'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'{0:7d}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtot_area\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     44\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[1;34m'The upper limit of its fractional error is estimated to be:'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfrac_diff\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'%'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     45\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[1;34m'The correct answer is: '\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m15.0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Unknown format code 'd' for object of type 'float'"
+      "The integral evaluated to within specified accuracy: 6.493939\n",
+      "The upper limit of its fractional error is estimated to be: 1.28499047361e-05 %\n",
+      "The correct answer is:  6.49393940227\n",
+      "The actual fractional error is: 8.5666028474e-07 %\n"
      ]
     }
    ],
@@ -57,7 +44,7 @@
     "import math\n",
     "\n",
     "def midpoints(a,b,dy):\n",
-    "    n = (b-a)*dy\n",
+    "    n = (b-a)/dy\n",
     "    print 'number of steps :', '{:4f}'.format(n)\n",
     "    w = (b-a)/n \n",
     "    mdpts = []\n",
@@ -94,9 +81,9 @@
     "            print 'frac_diff : N/A', '\\n'\n",
     "        else:\n",
     "            print 'frac_diff : ', frac_diff, '\\n'\n",
-    "        dy += 1\n",
+    "        dy /= 2.0\n",
     "    \n",
-    "    print 'The integral evaluated to within specified accuracy:', '{0:7d}'.format(tot_area)\n",
+    "    print 'The integral evaluated to within specified accuracy:', '{0:7f}'.format(tot_area)\n",
     "    print 'The upper limit of its fractional error is estimated to be:', frac_diff*100, '%'\n",
     "    print 'The correct answer is: ', math.pi**4/15.0\n",
     "    print 'The actual fractional error is:', (tot_area - math.pi**4/15.0) / tot_area * 100,\n",
@@ -114,34 +101,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "import math\n",
-    "\n",
-    "def stefboltz(a,b,dy):\n",
-    "    frac_diff = (tot_area-tot_area_old)/tot_area\n",
-    "    while frac_diff >= 0.000001\n",
-    "    \n",
-    "    \n",
-    "        n = (b-a)*dy\n",
-    "        w = (b-a)/n \n",
-    "        mdpts = []\n",
-    "        l = a\n",
-    "        r = l + w\n",
-    "        while r <= b:\n",
-    "            mdpts += [(l+r)/2.0]\n",
-    "            l += w\n",
-    "            r += w\n",
-    "        \n",
-    "        area=0.0\n",
-    "        for m in mdpts:\n",
-    "            area += (m**3/(math.exp(m)-1))\n",
-    "        tot_area = area*w\n",
-    "        tot_area_old =  \n",
-    "        #return tot_area, math.pi**4/15.0\n",
-    "\n",
-    "#print stefboltz(0.0,100.0,10)\n",
-    "        "
-   ]
+   "source": []
   }
  ],
  "metadata": {
