--- a/StefanBoltzmann.py.ipynb
+++ b/StefanBoltzmann.py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -13,30 +13,30 @@
      "text": [
       "running... \n",
       "\n",
-      "number of steps : 100.000000\n",
-      "dy :  1.0000 ,  integral = 6.4975852356\n",
+      "number of steps :  100\n",
+      "dy :  1.000 ,  integral = 6.4975852\n",
       "frac_diff : N/A \n",
       "\n",
-      "number of steps : 200.000000\n",
-      "dy :  0.5000 ,  integral = 6.49416726685\n",
-      "frac_diff :  0.0005263136303 \n",
+      "number of steps :  200\n",
+      "dy :  0.500 ,  integral = 6.4941673\n",
+      "frac_diff :  0.0005263 \n",
       "\n",
-      "number of steps : 400.000000\n",
-      "dy :  0.2500 ,  integral = 6.4939536438\n",
-      "frac_diff :  3.28956839854e-05 \n",
+      "number of steps :  400\n",
+      "dy :  0.250 ,  integral = 6.4939536\n",
+      "frac_diff :  0.0000329 \n",
       "\n",
-      "number of steps : 800.000000\n",
-      "dy :  0.1250 ,  integral = 6.49394029236\n",
-      "frac_diff :  2.05598447417e-06 \n",
+      "number of steps :  800\n",
+      "dy :  0.125 ,  integral = 6.4939403\n",
+      "frac_diff :  0.0000021 \n",
       "\n",
-      "number of steps : 1600.000000\n",
-      "dy :  0.0625 ,  integral = 6.4939394579\n",
-      "frac_diff :  1.28499047361e-07 \n",
+      "number of steps : 1600\n",
+      "dy :  0.062 ,  integral = 6.4939395\n",
+      "frac_diff :  0.0000001 \n",
       "\n",
-      "The integral evaluated to within specified accuracy: 6.493939\n",
-      "The upper limit of its fractional error is estimated to be: 1.28499047361e-05 %\n",
-      "The correct answer is:  6.49393940227\n",
-      "The actual fractional error is: 8.5666028474e-07 %\n"
+      "The integral evaluated to within specified accuracy: 6.4939395\n",
+      "The upper limit of its fractional error is estimated to be: 0.000013 %\n",
+      "The correct answer is:  6.493939\n",
+      "The actual fractional error is: 0.000001 %\n"
      ]
     }
    ],
@@ -45,7 +45,7 @@
     "\n",
     "def midpoints(a,b,dy):\n",
     "    n = (b-a)/dy\n",
-    "    print 'number of steps :', '{:4f}'.format(n)\n",
+    "    print 'number of steps :', '{:4d}'.format(int(n))\n",
     "    w = (b-a)/n \n",
     "    mdpts = []\n",
     "    l = a\n",
@@ -59,10 +59,9 @@
     "def reimann_sum(mdpts, w):        \n",
     "    area=0.0\n",
     "    for m in mdpts:\n",
-    "        #print 'm', m\n",
     "        area += (m**3/(math.exp(m)-1))\n",
     "    tot_area = area*w\n",
-    "    print ' integral =', tot_area \n",
+    "    print ' integral =', '{0:.7f}'.format(tot_area) \n",
     "    return tot_area\n",
     "\n",
     "def stefboltz(a,b,dy):\n",
@@ -74,19 +73,19 @@
     "    while frac_diff >= 0.000001:\n",
     "        mdpts, w = midpoints(a,b,dy)\n",
     "        tot_area_old = tot_area\n",
-    "        print 'dy : ', '{0:.4f}'.format(dy),',',\n",
+    "        print 'dy : ', '{0:.3f}'.format(dy),',',\n",
     "        tot_area = reimann_sum(mdpts,w)\n",
     "        frac_diff = math.fabs((tot_area - tot_area_old) / tot_area)\n",
     "        if frac_diff == 1.0:\n",
     "            print 'frac_diff : N/A', '\\n'\n",
     "        else:\n",
-    "            print 'frac_diff : ', frac_diff, '\\n'\n",
+    "            print 'frac_diff : ', '{0:.7f}'.format(frac_diff), '\\n'\n",
     "        dy /= 2.0\n",
     "    \n",
-    "    print 'The integral evaluated to within specified accuracy:', '{0:7f}'.format(tot_area)\n",
-    "    print 'The upper limit of its fractional error is estimated to be:', frac_diff*100, '%'\n",
-    "    print 'The correct answer is: ', math.pi**4/15.0\n",
-    "    print 'The actual fractional error is:', (tot_area - math.pi**4/15.0) / tot_area * 100,\n",
+    "    print 'The integral evaluated to within specified accuracy:', '{0:.7f}'.format(tot_area)\n",
+    "    print 'The upper limit of its fractional error is estimated to be:', '{0:7f}'.format(frac_diff*100), '%'\n",
+    "    print 'The correct answer is: ', '{0:7f}'.format(math.pi**4/15.0)\n",
+    "    print 'The actual fractional error is:', '{0:7f}'.format(abs((tot_area - math.pi**4/15.0)) / tot_area * 100),\n",
     "    return '%'\n",
     "\n",
     "    \n",
