--- a/comp-phys-wk3.ipynb
+++ b/comp-phys-wk3.ipynb
@@ -25,6 +25,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
@@ -189,43 +198,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'approx' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-50-204c50f554b9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mL\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'Taylor Series Approximation:'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmath\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlog\u001b[0m  \u001b[0;31m#you would guess math module would have log...yes!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-50-204c50f554b9>\u001b[0m in \u001b[0;36mL\u001b[0;34m(x, n)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mapprox\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0;31m#print approx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mapprox\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'approx' referenced before assignment"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oh nooooooooooo, stop! 1.26262626263\n",
+      "Taylor Series Approximation: 0.00779043791355\n"
      ]
     }
    ],
    "source": [
     "import pdb\n",
-    "\n",
+    "from math import *\n",
     "def L(x, n):\n",
-    "    for i in range(1, n + 1):\n",
-    "        \n",
-    "        approx += (1/(i+1))*(x/(1+x))**(i+1)\n",
-    "        #print approx\n",
+    "    if x<-1:\n",
+    "        return 'x cannot be below -1. Try Again'\n",
+    "    #pdb.set_trace()\n",
+    "    for i in range(1, n+1):\n",
+    "\tapprox = 0.0\n",
+    "        approx += (1.0/i)*(x/(1.0+x))**(i)\n",
+    "    \tif i == n-1:    \n",
+    "    \t    o_approx = approx \n",
+    "    fracerror = (abs(o_approx - approx) / approx) * 100\n",
+    "    print 'Oh nooooooooooo, stop!', fracerror  \n",
     "    return approx\n",
     "\n",
-    "\n",
-    "x = 2\n",
+    "x = 400\n",
+    "approx = 0\n",
     "y = L(x, 100)\n",
     "print 'Taylor Series Approximation:', y\n",
     "from math import log  #you would guess math module would have log...yes!\n",
-    "exact_val = log(1+x)\n",
-    "print 'exact_val', exact_val\n",
-    "from math import log1p  #more accurate for small x.\n",
-    "print 'log1p output', log1p(x)"
+    "#exact_val = log(1+x)\n",
+    "#print 'exact_val', exact_val\n",
+    "#from math import log1p  #more accurate for small x.\n",
+    "#print 'log1p output', log1p(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from math import *\n",
+    "x = 10\n",
+    "%timeit L(x,100)\n",
+    "%timeit exact_val = log(x+1)\n",
+    "%from math import log1p  \n",
+    "%print 'log1p output', log1p(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44.6150353213\n",
+      "42.0252092426\n",
+      "42.0002520015\n",
+      "42.0000025203\n",
+      "41.9999923729\n",
+      "42.0007362223\n",
+      "41.9442258703\n",
+      "47.7395900589\n",
+      "-666.133814775\n",
+      "0.0\n",
+      "0.0\n",
+      "-666133814.775\n",
+      "66613381477.5\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Numerical Instability and arbitrary Precision\n",
+    "\n",
+    "def g(t):\n",
+    "    return t**(-6)\n",
+    "\n",
+    "def diff2(f, x, h=1e-6):\n",
+    "    r = (f(x-h) - 2*f(x) + f(x+h))/float(h*h)\n",
+    "    return r\n",
+    "\n",
+    "for k in range(1, 15):\n",
+    "    h = 10**(-k)\n",
+    "    d2g = diff2(g, 1,h)\n",
+    "    print d2g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44.6150353212698176986956345301\n",
+      "42.02520924257460072378326007\n",
+      "42.000252000924002574006009\n",
+      "42.0000025200000924000023\n",
+      "42.00000002520000000922\n",
+      "42.000000000251999998\n",
+      "42.0000000000025200\n",
+      "42.00000000000001\n",
+      "42.000000000000\n",
+      "42.0000000004\n",
+      "42.00000000\n",
+      "42.000000\n",
+      "42.0000\n",
+      "42.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Numerical Instability and arbitrary Precision\n",
+    "import decimal\n",
+    "decimal.getcontext().prec = 30\n",
+    "D = decimal.Decimal\n",
+    "\n",
+    "def g(t):\n",
+    "    return t**(-6)\n",
+    "\n",
+    "def diff2(f, x, h=1e-9):\n",
+    "    x = D(str(x)); h = D(str(h))\n",
+    "    r = (f(x-h) - 2*f(x) + f(x+h)) / (h*h)\n",
+    "    return r\n",
+    "\n",
+    "for k in range(1, 15):\n",
+    "    h = 10**(-k)\n",
+    "    d2g = diff2(g, 1,h)\n",
+    "    print d2g\n",
+    "    \n",
+    "if __name__ == \"__main\":\n",
+    "    \n",
+    "    import doctest\n",
+    "    doctest.testmod() -v\n",
+    "    \n",
+    "    x =1000\n",
+    "    y = L(x)\n",
+    "    print 'series approx' , y "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = lambda x: x**2 +4\n",
+    "def g(x):\n",
+    "    return x**2+ 4\n",
+    "\n",
+    "print g(3)\n",
+    "print f(3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'function'>\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import pi, sin\n",
+    "x = 1.5\n",
+    "a = 2 if x< 1 else 0\n",
+    "f = lambda x: sin(x) if 0 <= x <= 2*pi else 0 \n",
+    "print type(f)\n",
+    "print a \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DOC TEST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#required for hw 2 and on"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#add doctex"
    ]
   }
  ],
