temp conv doctest

--- a/comp-phys-wk2.ipynb
+++ b/comp-phys-wk2.ipynb
@@ -183,8 +183,7 @@
    "source": [
     "#breakout: convert the above into a while loop\n",
     "\n",
-    "c = -100\n",
-    "print ' C    F'\n",
+    "\n",
     "while c <= 100:\n",
     "    f = (9.0/5)*c +32.\n",
     "    print '%5d %5.1f' % (c,f)\n",
@@ -485,6 +484,43 @@
     "a = 10\n",
     "F1 = F(a)\n",
     "print F1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "-Converts celcius temperatures into farenheight temperature-\n",
+    "\n",
+    ">>> temp_conv(0)\n",
+    "32.0\n",
+    "\n",
+    ">>> temp_conv(117)\n",
+    "242.6\n",
+    "\n",
+    ">>> temp_conv(77.32)\n",
+    "171.176\n",
+    "\n",
+    ">>> temp_conv(52./79)\n",
+    "33.18481012658228\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "def temp_conv(c):\n",
+    "    f = (9.0/5)*c +32.\n",
+    "    return f\n",
+    "\n",
+    "temp_conv(10)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    import doctest\n",
+    "    doctest.testmod() \n",
     "\n"
    ]
   }
