--- a/comp-phys-wk4.ipynb
+++ b/comp-phys-wk4.ipynb
@@ -566,27 +566,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-51-d880505bca75>, line 18)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-51-d880505bca75>\"\u001b[0;36m, line \u001b[0;32m18\u001b[0m\n\u001b[0;31m    if n == 0, i != m, i != n :\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[2, 3, 4, 5, 6, 7, 8, 9]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -603,27 +594,110 @@
     "\n",
     "def prime(a, b):\n",
     "    prime_lst = []\n",
-    "    array = np.linspace(a,b,1)\n",
-    "    for ar in array:\n",
+    "    arr = np.arange(a,b)\n",
+    "    for m in arr:\n",
     "        for i in range(2,10):\n",
-    "            br=a%i\n",
-    "            if br == 0:\n",
-    "                prime_lst += [ br ]\n",
+    "            n=m%i\n",
+    "            if n == 0: # wrong\n",
+    "                prime_lst += [  ]\n",
     "    return prime_lst\n",
     "\n",
-    "print prime (1, 100)\n",
+    "print prime (1, 10)\n",
     "            \n",
     "range(2,10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "global name 'Valueerror' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-44549e2740ef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mraise\u001b[0m \u001b[0mValueerror\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'carrots carrots carrots'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;31m#this will crash, I want it to crash\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-31-44549e2740ef>\u001b[0m in \u001b[0;36mp\u001b[0;34m(p)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#print 1/x\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mValueerror\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'carrots carrots carrots'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: global name 'Valueerror' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "#print 1/x\n",
+    "def p(p):\n",
+    "    raise Valueerror('carrots carrots carrots')\n",
+    "    \n",
+    "p(2)\n",
+    "#this will crash, I want it to crash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "6\n",
+      "\n",
+      "Characters in the string a:\n",
+      "H\n",
+      "e\n",
+      "y\n",
+      " \n",
+      "Y\n",
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "#string is a swquence in puthon:\n",
+    "s = 'Hey Yo'\n",
+    "print s[0]\n",
+    "print len(s)\n",
+    "\n",
+    "print '\\nCharacters in the string a:'\n",
+    "for c in s:\n",
+    "    print c\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-35-d2c113e84061>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-35-d2c113e84061>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print 'this is a very long sentenceand I am going to eat an apple after I find zachs soulhelp me\\\u001b[0m\n\u001b[0m                                                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Line Continuation Character\n",
+    "\n",
+    "print 'this is a very long sentence\\\n",
+    "and I am going to eat an apple after I find zachs soul\\\n",
+    "help me\\ \n",
+    "help me\\\n",
+    "help me'\n"
+   ]
   }
  ],
  "metadata": {
