--- a/gamma.ipynb
+++ b/gamma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -11,9 +11,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input t...3\n",
-      "input your desired tolerance....001\n",
-      "2\n"
+      "number to operate on:3.5\n",
+      "input your desired tolerance:.000001\n",
+      "3.32335093331\n",
+      "0.0000001\n",
+      "**********************************************************************\n",
+      "File \"__main__\", line 5, in __main__\n",
+      "Failed example:\n",
+      "    Gamma(-5)\n",
+      "Exception raised:\n",
+      "    Traceback (most recent call last):\n",
+      "      File \"C:\\Users\\JakeySnakey\\AppData\\Local\\Enthought\\Canopy\\App\\appdata\\canopy-1.5.5.3123.win-x86_64\\lib\\doctest.py\", line 1315, in __run\n",
+      "        compileflags, 1) in test.globs\n",
+      "      File \"<doctest __main__[0]>\", line 1, in <module>\n",
+      "        Gamma(-5)\n",
+      "    TypeError: Gamma() takes no arguments (1 given)\n"
      ]
     }
    ],
@@ -21,79 +33,85 @@
     "\"\"\"\n",
     "Gamma \n",
     "\n",
-    ">>> Gamma()\n",
+    ">>> Gamma(-5)\n",
     "'Error: Integer must be between 1 to 100. Try again.'\n",
     "\n",
     ">>> Gamma()\n",
     "1\n",
     "\n",
-    ">>> Gamma()\n",
+    ">>> Gamma(-22.7)\n",
     "'Error: Integer must be between 1 to 100. Try again.'\n",
     "\n",
-    ">>> Gamma()\n",
+    ">>> Gamma(1.5)\n",
+    "0.8862269\n",
     "\n",
+    ">>> Gamma(2.5)\n",
+    "1.32934038\n",
     "\n",
-    ">>> Gamma()\n",
-    "\n",
-    "\n",
-    ">>> Gamma()\n",
-    "\n",
+    ">>> Gamma(3.5)\n",
+    "3.32335079\n",
     "\n",
     "\"\"\"\n",
     "import math\n",
+    "import pdb\n",
     "\n",
-    "def gam_I(t):\n",
-    "    return math.factorial(t-1)\n",
-    "\n",
-    "def gam_II(t, dx):\n",
+    "def mdpts(dx):\n",
     "    a = 0\n",
     "    b = 1000\n",
+    "    mdpts = []    \n",
     "    n = (b-a)/dx # number of steps between interval\n",
-    "    mdpts = []\n",
     "    l = a\n",
     "    r = l + dx\n",
-    "    area=0.0 #area beneath the integral\n",
-    "        \n",
     "    while r <= b:\n",
     "        mdpts += [(l+r)/2.0]\n",
     "        l += dx\n",
     "        r += dx\n",
-    "        \n",
+    "    return mdpts\n",
+    "\n",
+    "def gam_I(num):\n",
+    "    return math.factorial(num-1)\n",
+    "\n",
+    "def gam_II(mdpts, dx, num):\n",
+    "    \n",
+    "    area=0.0 #area beneath the integral \n",
     "    for x in mdpts:\n",
-    "        area += (x**(t-1)*(math.exp(-x)))\n",
+    "        area += (x**(num-1.0)*(math.exp(-x)))\n",
     "    tot_area = area*dx\n",
     "    return tot_area \n",
     "\n",
-    "def Gamma(): #step is temporary for testing...\n",
-    "    t = input(\"input t...\")\n",
-    "    dx = input(\"input your desired tolerance...\")\n",
+    "def Gamma(num): #step is temporary for testing...\n",
+    "    dx = 1\n",
+    "    t = input(\"input your desired tolerance:\")\n",
     "    \n",
-    "    if 100 < t < 1 :\n",
+    "    if  num < 1 or num > 100 :\n",
     "        return 'Error: Integer must be between 1 to 100. Try again.'\n",
     "\n",
-    "    if type(t) == int:\n",
-    "        return gam_I(t)\n",
+    "    if type(num) == int:\n",
+    "        return gam_I(num)\n",
     "    \n",
     "    else:\n",
-    "        return gam_II(t, dx)\n",
     "        \n",
+    "        old = 0.0\n",
+    "        new = 0.0\n",
+    "        frac_diff = 1.0\n",
+    "    \n",
+    "        while frac_diff >= t:\n",
+    "            old = new\n",
+    "            mdpt_lst = mdpts(dx)\n",
+    "            new = gam_II(mdpt_lst, dx, num)\n",
+    "            frac_diff = abs((new - old) / new)\n",
+    "            dx /= 2.0\n",
+    "        print new\n",
+    "        return '{0:.7f}'.format(frac_diff)\n",
+    "    \n",
     "print Gamma()\n",
     "\n",
-    "#if __name__ == \"__main__\":\n",
-    "    #import doctest\n",
-    "    #doctest.testmod()\n",
+    "if __name__ == \"__main__\":\n",
+    "    import doctest\n",
+    "    doctest.testmod()\n",
     "    \n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
