--- a/sorted_stars.ipynb
+++ b/sorted_stars.ipynb
@@ -2,113 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running... \n",
-      "\n",
-      "Ranked by Distance:\n",
-      "[('Alpha Centauri B', 4.2),\n",
-      " ('Alpha Centauri C', 4.2),\n",
-      " ('Alpha Centauri A', 4.3),\n",
-      " (\"Bernard's Star\", 6.0),\n",
-      " ('Wolf 359', 7.7),\n",
-      " ('BD +36 degrees 2147', 8.2),\n",
-      " ('Luyten 726-8 A', 8.4),\n",
-      " ('Luyten 726-8 B', 8.4),\n",
-      " ('Sirius A', 8.6),\n",
-      " ('Sirius B', 8.6),\n",
-      " ('Ross 154', 9.4)]\n",
-      "\n",
-      "Ranked by Apperent Brightness:\n",
-      "[('Wolf 359', 1e-06),\n",
-      " ('Luyten 726-8 B', 2e-06),\n",
-      " ('Luyten 726-8 A', 3e-06),\n",
-      " ('Alpha Centauri C', 1e-05),\n",
-      " ('Ross 154', 2e-05),\n",
-      " (\"Bernard's Star\", 4e-05),\n",
-      " ('BD +36 degrees 2147', 0.0003),\n",
-      " ('Sirius B', 0.001),\n",
-      " ('Alpha Centauri B', 0.077),\n",
-      " ('Alpha Centauri A', 0.26),\n",
-      " ('Sirius A', 1.0)]\n",
-      "\n",
-      "Ranked by Absolute Brightness:\n",
-      "[('Wolf 359', 2e-05),\n",
-      " ('Luyten 726-8 B', 4e-05),\n",
-      " ('Alpha Centauri C', 6e-05),\n",
-      " ('Luyten 726-8 A', 6e-05),\n",
-      " (\"Bernard's Star\", 0.0005),\n",
-      " ('Ross 154', 0.0005),\n",
-      " ('Sirius B', 0.003),\n",
-      " ('BD +36 degrees 2147', 0.006),\n",
-      " ('Alpha Centauri B', 0.45),\n",
-      " ('Alpha Centauri A', 1.56),\n",
-      " ('Sirius A', 23.6)]\n",
-      "\n",
-      "Finished!\n",
-      "**********************************************************************\n",
-      "File \"__main__\", line 7, in __main__\n",
-      "Failed example:\n",
-      "    star_sort(data)\n",
-      "Expected:\n",
-      "    Running... \n",
-      "Got:\n",
-      "    Running... \n",
-      "    <BLANKLINE>\n",
-      "    Ranked by Distance:\n",
-      "    [('Alpha Centauri B', 4.2),\n",
-      "     ('Alpha Centauri C', 4.2),\n",
-      "     ('Alpha Centauri A', 4.3),\n",
-      "     (\"Bernard's Star\", 6.0),\n",
-      "     ('Wolf 359', 7.7),\n",
-      "     ('BD +36 degrees 2147', 8.2),\n",
-      "     ('Luyten 726-8 A', 8.4),\n",
-      "     ('Luyten 726-8 B', 8.4),\n",
-      "     ('Sirius A', 8.6),\n",
-      "     ('Sirius B', 8.6),\n",
-      "     ('Ross 154', 9.4)]\n",
-      "    <BLANKLINE>\n",
-      "    Ranked by Apperent Brightness:\n",
-      "    [('Wolf 359', 1e-06),\n",
-      "     ('Luyten 726-8 B', 2e-06),\n",
-      "     ('Luyten 726-8 A', 3e-06),\n",
-      "     ('Alpha Centauri C', 1e-05),\n",
-      "     ('Ross 154', 2e-05),\n",
-      "     (\"Bernard's Star\", 4e-05),\n",
-      "     ('BD +36 degrees 2147', 0.0003),\n",
-      "     ('Sirius B', 0.001),\n",
-      "     ('Alpha Centauri B', 0.077),\n",
-      "     ('Alpha Centauri A', 0.26),\n",
-      "     ('Sirius A', 1.0)]\n",
-      "    <BLANKLINE>\n",
-      "    Ranked by Absolute Brightness:\n",
-      "    [('Wolf 359', 2e-05),\n",
-      "     ('Luyten 726-8 B', 4e-05),\n",
-      "     ('Alpha Centauri C', 6e-05),\n",
-      "     ('Luyten 726-8 A', 6e-05),\n",
-      "     (\"Bernard's Star\", 0.0005),\n",
-      "     ('Ross 154', 0.0005),\n",
-      "     ('Sirius B', 0.003),\n",
-      "     ('BD +36 degrees 2147', 0.006),\n",
-      "     ('Alpha Centauri B', 0.45),\n",
-      "     ('Alpha Centauri A', 1.56),\n",
-      "     ('Sirius A', 23.6)]\n",
-      "    <BLANKLINE>\n",
-      "    'Finished!'\n",
-      "**********************************************************************\n",
-      "1 items had failures:\n",
-      "   1 of   1 in __main__\n",
-      "***Test Failed*** 1 failures.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "\n",
@@ -164,11 +62,7 @@
     "\n",
     "    return 'Finished!'\n",
     "\n",
-    "print star_sort(data)\n",
-    "\n",
-    "#if __name__ == \"__main__\":\n",
-    "    import doctest\n",
-    "    doctest.testmod()"
+    "print star_sort(data) "
    ]
   },
   {
