--- a/PhysPy-wk5_2015S.ipynb
+++ b/PhysPy-wk5_2015S.ipynb
@@ -897,11 +897,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h(t = 2; v0 = 10) = 0.38\n",
+      "<type 'instance'>\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "class Y:\n",
     "    def __init__(self, v0, g = 9.81):   \n",
@@ -1017,11 +1027,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.01899999128375"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "diff = lambda f, x, h = 1e-10:(f(x+h) - f(x-h))/(2*h)\n",
     "\n",
@@ -1030,16 +1051,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.01899999128375"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Since we defined the method __call__, it can be done with better visual:\n",
     "diff = lambda f, x, h = 1e-10:(f(x+h) - f(x-h))/(2*h)\n",
     "\n",
-    "diff(y, 0.1)"
+    "diff(y, 0.1)\n"
    ]
   },
   {
@@ -1062,11 +1094,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h = v0*t - 0.5*g*t**2; parameters: v0 = 10, g = 9.81 (constant).\n",
+      "h = v0*t - 0.5*g*t**2; parameters: v0 = 10, g = 9.81 (constant).\n"
+     ]
+    }
+   ],
    "source": [
     "''' \n",
     "One more special method: __str__\n",
