--- a/python_built-in_functions.ipynb
+++ b/python_built-in_functions.ipynb
@@ -15,16 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "List of Functions:\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "list()\n",
-    "long()\n",
-    "map()\n",
+    "#Functions I didn't do:\n",
     "max()‡\n",
     "min()‡\n",
     "oct()\n",
@@ -934,16 +925,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#isinstance()\n",
+    "\n",
+    "print isinstance(21, int)\n",
+    "print isinstance(21, float)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 3, 2, 4, 3, 3, 5, 4, 5, 4, 5, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#list()\n",
+    "\n",
+    "print list((1,4,3,2,4,3,3,5,4,5,4,5,3,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'long'>\n",
+      "439547433\n"
+     ]
+    }
+   ],
+   "source": [
+    "#long()\n",
+    "\n",
+    "print type(long(24))\n",
+    "print long(439547433.4556457)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 4, 4, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#map()\n",
+    "\n",
+    "def square(x):\n",
+    "    x.append(19)\n",
+    "    \n",
+    "x = [4,4,4]\n",
+    "print map(square(x), x )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#isinstance()\n",
-    "\n",
-    "isinstance()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
