--- a/PhysPy-wk6_2015S.ipynb
+++ b/PhysPy-wk6_2015S.ipynb
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 767,
    "metadata": {
     "collapsed": false
    },
@@ -711,7 +711,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['a', 'x', 'd', 'c', 'z', 'b', 'y']\n"
+      "['y', 'x', 'c', 'a', 'b', 'z', 'd']\n",
+      "['female', 'male']\n"
      ]
     }
    ],
@@ -719,7 +720,11 @@
     "import random\n",
     "lst = ['a', 'b', 'c', 'd', 'x', 'y', 'z']\n",
     "random.shuffle(lst)   ### this shuffles the list in place.  \n",
-    "print lst   ### you can run this as many times as you want."
+    "print lst   ### you can run this as many times as you want.\n",
+    "\n",
+    "gender = ['female', 'male']\n",
+    "random.shuffle(gender)\n",
+    "print gender"
    ]
   },
   {
@@ -785,6 +790,26 @@
     "# are treated and used in Python.\n",
     "print ascii_lowercase\n",
     "print sample(ascii_lowercase, 26)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 745,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-745-0876687e7df3>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-745-0876687e7df3>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print x = random.shuffle([1,0])\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "print shuffle([1,0])"
    ]
   },
   {
