--- a/PhysPy-wk7_2015S.ipynb
+++ b/PhysPy-wk7_2015S.ipynb
@@ -741,6 +741,123 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ils\">Aaban</s', 'ils\">Aabheer</s', 'ils\">Aadam</s', 'ils\">Aadan</s', 'ils\">Aadarsh</s', 'ils\">Aadesh</s', 'ils\">Aadhan</s', 'ils\">Aadhira</s', 'ils\">Aadi</s', 'ils\">Aadidev</s', 'ils\">Aadil</s', 'ils\">Aadinath</s', 'ils\">Aadir</s', 'ils\">Aadit</s', 'ils\">Aaditeya</s', 'ils\">Aaditya</s', 'ils\">Aadrian</s', 'ils\">Aagam</s', 'ils\">Aagney</s', 'ils\">Aagneya</s', 'ils\">Aahan</s', 'ils\">Aahlaad</s', 'ils\">Aahva</s', 'ils\">Aaidan</s', 'ils\">Aaiden</s', 'ils\">Aaidyn</s', 'ils\">Aakaar</s', 'ils\">Aakaash</s', 'ils\">Aakar</s', 'ils\">Aakarshan</s', 'ils\">Aalap</s', 'ils\">Aalok</s', 'ils\">Aamil</s', 'ils\">Aamir</s', 'ils\">Aamod</s']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import urllib2 \n",
+    "import re\n",
+    "m_names = 'http://www.prokerala.com/kids/baby-names/boy/page-1.html'\n",
+    "f_names = 'http://www.prokerala.com/kids/baby-names/girl/page-1.html'\n",
+    "\n",
+    "#male names\n",
+    "infile = urllib2.urlopen(m_names) \n",
+    "male_text = infile.read()   #here I used .read() so there you can see it with webbrowser.open() below.\n",
+    "infile.close() \n",
+    "\n",
+    "#female names\n",
+    "infile = urllib2.urlopen(f_names) \n",
+    "female_text = infile.read()   #here I used .read() so there you can see it with webbrowser.open() below.\n",
+    "infile.close() \n",
+    "#print female_text\n",
+    "\n",
+    "male_name_lst_temp = re.findall('ils\">.*</s', male_text)\n",
+    "female_name_lst = re.findall('ails\">.*</', female_text)\n",
+    "\n",
+    "print male_name_lst_temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"A'dab\", \"A'idah\", \"A'li\", \"A'mal\", 'Aabha', 'Aadab', 'Aafreen', 'Aaisha', 'Aakanksha', 'Aalia', 'Aaliya', 'Aaliyah', 'Aalliyah', 'Aamaal', 'Aamanda', 'Aamani', 'Aamber', 'Aaminah', 'Aamira', 'Aamirah', 'Aamiya', 'Aana', 'Aanisah', 'Aanya', 'Aaradhya', 'Aaria', 'Aariana', 'Aarianna', 'Aariel', 'Aarielle', 'Aarushi', 'Aaryah', 'Aaryana', 'Aaryanna', 'Aasia', \"A'dab\", \"A'idah\", \"A'li\", \"A'mal\", 'Aabha', 'Aadab', 'Aafreen', 'Aaisha', 'Aakanksha', 'Aalia', 'Aaliya', 'Aaliyah', 'Aalliyah', 'Aamaal', 'Aamanda', 'Aamani', 'Aamber', 'Aaminah', 'Aamira', 'Aamirah', 'Aamiya', 'Aana', 'Aanisah', 'Aanya', 'Aaradhya', 'Aaria', 'Aariana', 'Aarianna', 'Aariel', 'Aarielle', 'Aarushi', 'Aaryah', 'Aaryana', 'Aaryanna', 'Aasia']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import urllib2 \n",
+    "import re\n",
+    "\n",
+    "male_name_lst = []\n",
+    "female_name_lst = []\n",
+    "z = 0 #number of pages iterated through\n",
+    "\n",
+    "while z <=1: #iterates through baby-names website pages for names \n",
+    "\n",
+    "\tm_names = 'http://www.prokerala.com/kids/baby-names/boy/page-' + str(z) + '.html'\n",
+    "\tf_names = 'http://www.prokerala.com/kids/baby-names/girl/page-' + str(z) + '.html'\n",
+    "\n",
+    "\t#male names\n",
+    "\tinfile = urllib2.urlopen(m_names) \n",
+    "\tmale_text = infile.read()   \n",
+    "\tinfile.close() \n",
+    "\t#print male_text\n",
+    "\n",
+    "\t#female names\n",
+    "\tinfile = urllib2.urlopen(f_names) \n",
+    "\tfemale_text = infile.read()   \n",
+    "\tinfile.close() \n",
+    "\t#print female_text\n",
+    "\t\n",
+    "\t#finds all names and puts in list\n",
+    "\tmale_name_lst_temp = re.findall('ils\">.*</s', male_text)\n",
+    "\tmale_name_lst += male_name_lst_temp\n",
+    "\tfemale_name_lst_temp = re.findall('ils\">.*</s', female_text)\n",
+    "\tfemale_name_lst += female_name_lst_temp\n",
+    "\n",
+    "\tz+=1\n",
+    "\n",
+    "male_names = []\n",
+    "for name in male_name_lst: # strips names of unnecessary characters\n",
+    "    string = name.lstrip('ils\">').rstrip('</s')\n",
+    "    male_names.append(string)\n",
+    "\n",
+    "#print male_names\n",
+    "\n",
+    "female_names = []\n",
+    "for name in female_name_lst: #same as above\n",
+    "    string = name.lstrip('ils\">').rstrip('</s')\n",
+    "    female_names.append(string)\n",
+    "\n",
+    "#print female_names\n",
+    "\n",
+    "a = open( 'woman_names', 'w') \n",
+    "b = open( 'man_names', 'w')\n",
+    "\n",
+    "a.write(str(female_names))\n",
+    "b.write(str(male_names))\n",
+    "\n",
+    "a.close()\n",
+    "b.close()\n",
+    "\n",
+    "#with open('woman_names', 'r') as f:\n",
+    "    #print f.read()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
